--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: cctv_sasat
-description: A new Flutter project.
+description: project pantauan cctv by satria ramadan.
 publish_to: none
 version: 1.0.0
 
@@ -19,7 +19,6 @@ dependencies:
   basic_utils: 5.6.1
   jiffy: 6.3.1
   shared_preferences: 2.2.1
-  syncfusion_flutter_datepicker: 27.2.5
   lottie: 3.3.1
   easy_localization: 3.0.7
   pattern_formatter: 4.0.0
@@ -27,17 +26,14 @@ dependencies:
   image_picker: 1.0.6
   smooth_corner: 1.1.1
   collection: 1.19.0
-  dotted_border: 2.1.0
   flutter_bloc: 8.1.3
   go_router: 14.2.1
   provider: 6.1.2
   loader_overlay: 2.1.0
-  url_launcher: 6.2.4
   package_info_plus: 4.1.0
   webview_flutter: 4.10.0
   shimmer: 3.0.0
   equatable: 2.0.7
-  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
