--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   webview_flutter: 4.10.0
   shimmer: 3.0.0
   equatable: 2.0.7
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
