--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,20 +14,18 @@ dependencies:
     git:
       url: https://github.com/strhmdn14102004/assets.git
       # path: D:/assets
-  get: 4.6.6
-  dio: 5.3.2
-  shared_preferences: 2.2.1
+  get: ^4.7.2
+  dio: ^5.8.0+1
   lottie: 3.3.1
-  easy_localization: 3.0.7
-  file_picker: 8.1.7
-  image_picker: 1.0.6
-  smooth_corner: 1.1.1
-  flutter_bloc: 8.1.3
-  go_router: 14.2.1
-  provider: 6.1.2
-  loader_overlay: 2.1.0
-  package_info_plus: 4.1.0
-  webview_flutter: 4.10.0
+  easy_localization: ^3.0.7+1
+  file_picker: ^8.3.7
+  image_picker: ^1.1.2
+  flutter_bloc: ^9.1.1
+  go_router: ^16.0.0
+  provider: ^6.1.5
+  loader_overlay: ^2.1.0
+  package_info_plus: ^8.3.0
+  webview_flutter: ^4.13.0
   shimmer: 3.0.0
   equatable: 2.0.7
   cached_network_image: ^3.4.1
@@ -35,7 +33,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 flutter:
   uses-material-design: true
