--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,14 +12,8 @@ dependencies:
 
   base:
     git:
-      url: https://github.com/strhmdn14102004/assets.git
+      url: https://github.com/strhmdn14102004/assets-flutter.git
       # path: D:/assets
-  get: ^4.7.2
-  dio: ^5.8.0+1
-  lottie: 3.3.1
-  easy_localization: ^3.0.7+1
-  file_picker: ^8.3.7
-  image_picker: ^1.1.2
   flutter_bloc: ^9.1.1
   go_router: ^16.0.0
   provider: ^6.1.5
@@ -29,6 +23,7 @@ dependencies:
   shimmer: 3.0.0
   equatable: 2.0.7
   cached_network_image: ^3.4.1
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   flutter_test:
